<resources>
    <string name="app_name">সেতু</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="bdt_symbol">৳ </string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>


    <string name="out_of_shetu_area_str">আপনি সেতু নেটওয়ার্ক এরিয়ার বাইরে আছেন</string>
    <string name="out_of_area_str">নেটওয়ার্ক এরিয়াতে গিয়ে আবার চেষ্টা করুন।
            নেটওয়ার্ক এরিয়া সম্পর্কে বিস্তারিত জানতে সেতু রিচার্জ এজেন্টের সাথে যোগাযোগ করুন।</string>
    <string name="contact_with_shet_agent_str">ইন্টারনেট ব্যবহার করার জন্য প্যাকেজ কিনতে বা কানেক্ট
            হবার জন্য সেতু নেটওয়ার্ক এরিয়ার মধ্যে অবস্থান করুন</string>
    <string name="recharge_to_use_str">ইন্টারনেট ব্যবহার করার জন্য আপনার নিকটস্থ সেতু রিচার্জ পয়েন্ট থেকে রিচার্জ করুন এবং পছন্দসই প্যাকেজ কিনুন।</string>
    <string name="buy_pkg_to_use_str">আনলিমিটেড ইন্টারনেটের সাথে সংযুক্ত হতে পছন্দসই প্যাকেজ বেছে নিন</string>
    <string name="current_pkg_toolbar_title">আপনার বর্তমান প্যাকেজ</string>
    <string name="current_pkg_str">বর্তমান প্যাকেজ</string>
    <string name="welcome_str">স্বাগতম</string>
    <string name="your_phn_str">আপনার ফোন নাম্বার</string>
    <string name="use_phn_str">আপনার ফোন নাম্বার ব্যবহার করে অ্যাপে প্রবেশ করুন</string>
    <string name="disconnect_btn_str">ডিসকানেক্ট করুন</string>
    <string name="disconnect_msg_str1">আপনি সেতু আনলিমিটেড ইন্টারনেটের সাথে সংযুক্ত নন</string>
    <string name="disconnect_msg_str2">আজ ব্যবহার করেছেনঃ </string>
    <string name="connect_btn_str">কানেক্ট করুন</string>
    <string name="connect_msg_str1">আপনি সেতু আনলিমিটেড ইন্টারনেটের সাথে সংযুক্ত হয়েছেন</string>
    <string name="expiry_date_str">মেয়াদ: </string>
    <string name="sms_code_str">SMS কোড</string>
    <string name="current_balance_str">বর্তমান ব্যালান্স</string>
    <string name="purchase_date_str">কেনার তারিখ: </string>
    <string name="otp_mismatch_str">কোড মেলেনি</string>
    <string name="auto_renew_str">অটো রিনিউ</string>
    <string name="buy_again_str">আবার কিনুন</string>
    <string name="enter_name_str">আপনার নাম লিখুন</string>
    <string name="verify_proceed_str">এগিয়ে যান</string>
    <string name="didnt_got_code_str">কোড পাননি? </string>
    <string name="verify_msg_number1"> -এ পাঠানো</string>
    <string name="verify_msg_number2">6 সংখ্যার কোডটি লিখুন</string>
    <string name="verify_toolbar_title">ফোন নাম্বার নিশ্চিত করুন</string>
    <string name="update_info_toolbar_title">আপনার পরিচিতি</string>
    <string name="pkg_buy_btn_str">প্যাকেজটি কিনুন</string>
    <string name="pkg_buy_btn_str2">প্যাকেজ কিনুন</string>
    <string name="pkg_buy_success">প্যাকেজ কেনা সম্পন্ন হয়েছে</string>
    <string name="internet_error">কোন সমস্যা হয়েছে</string>
    <string name="try_again_text">আপনার ইন্টারনেট সংযোগ পরীক্ষা করে আবার চেষ্টা করুন</string>

    <string name="send_code_again_str">আবার কোড পাঠান</string>
    <string name="send_code_again_link_str">
        <u> আবার কোড পাঠান</u>
    </string>

    <string name="buy_pkg_lnk">
        <u>Buy Packages</u>
    </string>
    <string name="new_acc_lnk">
           <u>Create One...</u>
    </string>
    <string name="lgn_acc_lnk">
        Already have an account?  <u>Login...</u>
    </string>
</resources>
