<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".activity.OtpVerifyActivity">
    <include
        android:id="@+id/login_toolbar"
        layout="@layout/app_bar_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/login_tv_sent_phn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verify_msg_number1"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:padding="5dp"/>
        <TextView
            android:id="@+id/login_tv_write_login_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verify_msg_number2"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:padding="5dp"/>
        <EditText
            android:background="@drawable/edit_text_box"
            android:textColor="@color/black"
            android:layout_margin="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_width="151dp"
            android:layout_height="wrap_content"
            android:hint="@string/sms_code_str"
            android:textColorHint="@color/silver"
            android:textAlignment="center"
            android:inputType="number"
            android:id="@+id/login_otp_et">
        </EditText>
        <TextView
            android:visibility="invisible"
            android:id="@+id/login_tv_code_mismatch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otp_mismatch_str"
            android:textColor="@color/colorAccent"
            android:textSize="12sp"
            android:padding="5dp"/>
        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/login_tv_didnt_get_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/didnt_got_code_str"
                android:textColor="@color/black"
                android:textSize="12sp"
                />
            <TextView
                android:id="@+id/login_tv_send_again"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_code_again_str"
                android:textColor="@color/black"
                android:textSize="12sp"
                />
        </LinearLayout>
        <Button
            android:textColor="@color/white"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/verify_proceed_str"
            android:textAllCaps="false"
            android:textAlignment="center"
            android:background="@drawable/btn_inactive_back"
            android:id="@+id/verify_otp_btn" />
    </LinearLayout>
</LinearLayout>