<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    android:padding="12dp"
    android:background="@color/white"
    tools:context=".activity.LoginActivity">


<!--    <ImageView-->
<!--        android:layout_marginTop="15dp"-->
<!--        android:layout_marginBottom="15dp"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_gravity="center"-->
<!--        android:src="@drawable/splash_logo" />-->



    <LinearLayout
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:padding="10dp"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/login_tv_welcome"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_str"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:padding="5dp"/>
        <TextView
            android:id="@+id/login_tv_enter_phn"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/use_phn_str"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:padding="5dp"/>




        <TextView
            android:id="@+id/login_tv_your_phn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_phn_str"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:padding="5dp"/>

        <EditText
            android:textColor="@color/black"
            android:layout_margin="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="01xxxxxxxxx"
            android:textColorHint="@color/silver"
            android:textAlignment="textStart"
            android:inputType="number"
            android:id="@+id/login_phn_et">
        </EditText>



        <Button
            android:textColor="@color/white"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/verify_proceed_str"
            android:textAllCaps="false"
            android:textAlignment="center"
            android:background="@drawable/btn_inactive_back"
            android:id="@+id/login_send_otp_btn" />
    </LinearLayout>

<!--    <EditText-->
<!--        android:layout_margin="5dp"-->
<!--        android:padding="5dp"-->
<!--        android:textColorHint="@color/light_grey"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="35dp"-->
<!--        android:hint="Enter OTP"-->
<!--        android:inputType="number"-->
<!--        android:textAlignment="center"-->
<!--        android:visibility="gone"-->
<!--        android:id="@+id/login_otp_et">-->
<!--    </EditText>-->




<!--    <Button-->
<!--        android:layout_marginLeft="15dp"-->
<!--        android:layout_marginRight="15dp"-->
<!--        android:layout_marginTop="25dp"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="40dp"-->
<!--        android:text="Verify"-->
<!--        android:textAllCaps="false"-->
<!--        android:textAlignment="center"-->
<!--        android:background="@drawable/btn_back_border"-->
<!--        android:id="@+id/login_verify_otp_btn" />-->

<!--    <LinearLayout-->
<!--        -->
<!--        android:layout_marginTop="20dp"-->
<!--        android:padding="5dp"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="horizontal"-->
<!--        android:gravity="center">-->
<!--        <TextView-->
<!--            android:textColor="@color/black"-->
<!--            android:layout_gravity="center_horizontal"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:textAllCaps="false"-->
<!--            android:text="Does not have an account?  " />-->
<!--        <TextView-->
<!--            android:textColor="@color/deepBlue"-->
<!--            android:alpha="0.7"-->
<!--            android:layout_gravity="center_horizontal"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:textAllCaps="false"-->
<!--            android:text="@string/new_acc_lnk"-->
<!--            android:id="@+id/create_new_acc_link" />-->
<!--    </LinearLayout>-->



</LinearLayout>